---
source: src/builder/tests/update/update_main.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
WITH "cte_peoples_update" AS (
  UPDATE
    "public"."peoples"
  SET
    "first-name" = $1,
    "last-name" = $2
  WHERE
    "public"."peoples"."id" = $3 RETURNING *
),
"cte_peoples_data" AS (
  SELECT
    "cte_peoples_update"."id" :: TEXT AS "id",
    "cte_peoples_update"."id" AS "main_id",
    NULL :: TEXT AS "related_id",
    NULL :: TEXT AS "related_type",
    $4 :: TEXT AS "type",
    JSON_BUILD_OBJECT(
      $5,
      "cte_peoples_update"."age",
      $6,
      "cte_peoples_update"."first-name",
      $7,
      "cte_peoples_update"."gender",
      $8,
      "cte_peoples_update"."last-name",
      $9,
      "cte_peoples_update"."twitter"
    ) AS "data",
    "cte_peoples_update"."favorite_color" AS "rel_favorite_color"
  FROM
    "cte_peoples_update"
),
"cte_rel_favorite_color_data" AS (
  SELECT
    "public"."favorite_color"."id" :: TEXT AS "id",
    "public"."favorite_color"."id" AS "main_id",
    "cte_peoples_data"."id" :: TEXT AS "related_id",
    $10 :: TEXT AS "related_type",
    $11 :: TEXT AS "type",
    JSON_BUILD_OBJECT($12, "public"."favorite_color"."color") AS "data"
  FROM
    "public"."favorite_color"
    INNER JOIN "cte_peoples_data" ON "public"."favorite_color"."id" = "cte_peoples_data"."rel_favorite_color"
) (
  SELECT
    "cte_rel_favorite_color_data"."id",
    "cte_rel_favorite_color_data"."type",
    "cte_rel_favorite_color_data"."data",
    "cte_rel_favorite_color_data"."related_type",
    "cte_rel_favorite_color_data"."related_id"
  FROM
    "cte_rel_favorite_color_data"
)
UNION
ALL (
  SELECT
    "cte_peoples_data"."id",
    "cte_peoples_data"."type",
    "cte_peoples_data"."data",
    "cte_peoples_data"."related_type",
    "cte_peoples_data"."related_id"
  FROM
    "cte_peoples_data"
);
